--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
             android:label="@string/title_activity_login" />
         <activity android:name=".CartActivity" />
         <activity android:name=".ShopsActivity" />
-        <activity android:name=".profileActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
