--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".CartActivity" />
         <activity android:name=".ShopsActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".CreateNewListActivity"></activity>
     </application>
 
 </manifest>
