--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -33,6 +35,7 @@
         <activity android:name=".SettingsActivity" />
         <activity android:name=".CreateNewListActivity" />
         <activity android:name=".ViewListActivity" />
+        <activity android:name=".FetchResultsActivity"></activity>
     </application>
 
 </manifest>
